adding responsive design

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
 
+    <div class='mobile'>
+      <a href="#" class="mobile-btn">20% off trial</a>
+      <div id='menu-icon'>
+        <div class="hamburger"></div>
+     </div>
+    </div>
      
     <header class="header">
       <nav class="navbar">
